# blackbox

./: .conductor.json  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  release-plz.toml
.conductor-logs/20260328-125417/: summary.txt
.conductor-logs/20260328-125423/: 11-json-tty-detection.result
.conductor-logs/20260328-151054/: 18-repo-deep-dive.result
.conductor-logs/20260328-203536/: summary.txt
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  release-plz.yml  release.yml
.planning/: improvements-plan.md
.planning/ralph-plans/01-directory-presence-time/: CLAUDE.md  prd.json
.planning/ralph-plans/02-contribution-heatmap/: AGENTS.md  prd.json
.planning/ralph-plans/03-work-rhythm-insights/: AGENTS.md  prd.json
.planning/ralph-plans/04-pr-cycle-time/: CLAUDE.md  prd.json
.planning/ralph-plans/05-code-churn-rate/: CLAUDE.md  prd.json
.planning/ralph-plans/06-llm-insights/: AGENTS.md  prd.json
.planning/ralph-plans/07-perf-review/: AGENTS.md  prd.json
.planning/ralph-plans/08-multi-ai-tracking/: CLAUDE.md  prd.json
.planning/ralph-plans/09-context-switch-frequency/: AGENTS.md  prd.json
.planning/ralph-plans/10-weekly-digest/: AGENTS.md  prd.json
.planning/ralph-plans/11-json-tty-detection/: CLAUDE.md  prd.json
.planning/ralph-plans/12-richer-status/: CLAUDE.md  prd.json
.planning/ralph-plans/13-sighup-config-reload/: CLAUDE.md  prd.json
.planning/ralph-plans/14-os-notifications/: AGENTS.md  prd.json
.planning/ralph-plans/15-next-step-suggestions/: CLAUDE.md  prd.json
docs/: feature-guide.md
src/: ai_tracking.rs  churn.rs  claude_tracking.rs  cli.rs  commit_quality.rs  config.rs  daemon.rs  db.rs  doctor.rs  enrichment.rs  error.rs  git_ops.rs  heatmap.rs  insights.rs  lib.rs  llm.rs  main.rs  notifications.rs  output.rs  perf_review.rs  poller.rs  query.rs  repo_deep_dive.rs  repo_scanner.rs  rhythm.rs  service.rs  setup.rs  shell_hook.rs  suggestions.rs  tui.rs  watcher.rs  webhook.rs
tests/: ai_tracking_integration_test.rs  ai_tracking_test.rs  churn_test.rs  claude_tracking_test.rs  cli_test.rs  codex_detector_test.rs  commit_quality.rs  commit_quality_test.rs  config_test.rs  daemon_test.rs  db_test.rs  digest_test.rs  doctor_test.rs  enrichment_test.rs  git_ops_test.rs  heatmap.rs  hook_test.rs  insights_test.rs  llm_test.rs  output.rs  output_test.rs  perf_review_test.rs  pr_cycle_test.rs  proptest_query.rs  query_test.rs  repo_deep_dive_test.rs  rhythm_test.rs  scanner_test.rs  setup_test.rs  streak_integration_test.rs  streak_test.rs  suggestions_test.rs  time_test.rs  watcher_test.rs  webhook_test.rs
(+6 files in other folders)
