[package]
name = "blackbox"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
etcetera = "0.8"
rusqlite = { version = "0.38", features = ["bundled"] }
rusqlite_migration = "2.4"
thiserror = "2.0"
anyhow = "1.0"
dialoguer = "0.11"
git2 = "0.20.4"
walkdir = "2.5.0"
log = "0.4.29"
env_logger = "0.11.9"
chrono = "0.4.44"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
assert_fs = "1.1"
tempfile = "3.0"
