[package]
name = "blackbox-cli"
version = "0.1.0"
edition = "2024"
description = "Flight recorder for your dev day - passive git activity tracking"
license = "MIT"
readme = "README.md"
repository = "https://github.com/brentguistwite/blackbox"
keywords = ["git", "time-tracking", "developer-tools", "productivity"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".claude/", ".planning/", ".gitignore"]

[lib]
name = "blackbox"

[[bin]]
name = "blackbox"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
etcetera = "0.8"
rusqlite = { version = "0.38", features = ["bundled"] }
rusqlite_migration = "2.4"
thiserror = "2.0"
anyhow = "1.0"
dialoguer = "0.11"
git2 = "0.20.4"
walkdir = "2.5.0"
log = "0.4.29"
env_logger = "0.11.9"
chrono = { version = "0.4.44", features = ["serde"] }
colored = "2.2"
nix = { version = "0.31.2", features = ["signal", "process", "user"] }
daemonize = "0.5.0"
serde_json = "1.0.149"
csv = "1.4.0"
regex = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
notify = "7"
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
assert_fs = "1.1"
tempfile = "3.0"
proptest = "1.6"
